--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>External View - Coming Soon</title>
+    <link rel="icon" href="favicon.ico" type="image/x-icon"> 
     <meta name="description" content="Get early access to External View — an AI-powered platform delivering insight at the intersection of influence, organizations, and impact.">
     <link rel="canonical" href="https://externalview.com/">
     <meta name="robots" content="index, follow">
